--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "ember-addon"
   ],
   "dependencies": {
-    "broccoli-cssnext-single": "^1.1.0",
+    "broccoli-cssnext-single": "~1.1.0",
     "broccoli-merge-trees": "^0.2.1",
     "ember-cli-version-checker": "^1.1.3",
     "lodash.merge": "^3.3.1"
